# parlyx-streamer

./: .gitignore  README.md  flake.nix  index.html  package.json  tsconfig.json  vite.config.ts
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs  parlyx.rs  session.rs  settings.rs
