[package]
name = "parlyx-streamer"
version = "0.1.0"
description = "Companion streaming client for parlyx"
authors = ["Tucker Bradford"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "parlyx_streamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
futures-util = "0.3"
bytes = "1"

# Audio capture
cpal = "0.15"
hound = "3"
rubato = "0.15"

# Misc
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
uuid = { version = "1", features = ["v4"] }
url = "2"

[features]
# This feature lets the bundled app keep its `parlyx-streamer` debug logs.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
